<resources>
    <string name="app_name">Index</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_detail_name">Name:</string>
    <string name="item_detail_description">Description:</string>
    <string name="item_detail_barcode">Barcode:</string>
    <string name="item_detail_purchasePrice">Purchase Price:</string>
    <string name="item_detail_msrp">MSRP:</string>
    <string name="item_detail_purchaseDate">Purchase Date:</string>
    <string name="item_detail_condition">Condition:</string>
    <string name="item_detail_warrantyDate">Warranty Date:</string>
    <string name="item_detail_lentOn">Lent on:</string>
    <string name="item_detail_lentTo">Lent to:</string>
    <string name="item_detail_rebate">Rebate:</string>
</resources>
